--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "test": "jest --coverage"
   },
   "type": "module",
   "keywords": [],
@@ -20,12 +21,29 @@
     "require": "^2.4.20"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.7",
     "@eslint/js": "^9.19.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "nodemon": "^3.1.9"
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.3",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "mjs",
+      "cjs",
+      "json"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx|mjs|cjs)$": "babel-jest"
+    }
   }
 }
