--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "crypto-js": "^4.2.0",
     "firebase-admin": "^13.0.2",
+    "pdfjs-dist": "^3.4.120",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
