--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "require": "^0.4.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.8",
     "@eslint/js": "^9.19.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
