--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --coverage"
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest"
   },
   "type": "module",
   "keywords": [],
@@ -12,6 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/core": "^7.26.8",
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.8",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
@@ -23,33 +26,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "mocha": "^11.1.0",
     "mongodb-memory-server": "^10.1.3",
     "nodemon": "^3.1.9",
+    "sinon": "^19.0.2",
     "supertest": "^7.0.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./backend/tests/setup.js"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "mjs",
-      "cjs",
-      "json"
-    ],
-    "extensionsToTreatAsEsm": [
-      ".ts",
-      ".tsx"
-    ],
-    "verbose": true,
-    "collectCoverage": true,
-    "coverageDirectory": "coverage"
   }
 }
