--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest"
+    "test": "jest"
   },
   "type": "module",
   "keywords": [],
