--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "openai": "^4.83.0",
-    "require": "^0.4.4"
+    "require": "^0.4.4",
+    "vite": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
