--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.11.0",
     "openai": "^4.83.0",
     "require": "^0.4.4",
     "vite": "^6.1.0"
@@ -32,6 +32,7 @@
     "@types/jest": "^29.5.14",
     "chai": "^5.1.2",
     "cross-env": "^7.0.3",
+    "cypress": "^14.1.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
