--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "test": "jest"
   },
   "type": "module",
