--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
+    "framer-motion": "^12.5.0",
     "pdfjs-dist": "^3.4.120",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
