fix cv parser giving projects, fix application tests

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
+    "test:choose": "jest",
     "test": "jest --testPathIgnorePatterns=frontend"
   },
   "type": "module",
