--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^3.0.6",
+    "@vitest/coverage-v8": "^3.0.9",
     "cypress": "^14.0.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^26.0.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.0",
