--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.19.0",
     "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "chai": "^5.1.2",
