--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "firebase": "^11.5.0",
     "firebase-admin": "^13.0.2",
     "framer-motion": "^12.5.0",
     "pdfjs-dist": "^3.4.120",
